--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ version = "0.0.0"
 [dependencies]
 atty = "0.2"
 structopt = "0.3"
+phf = { git = "https://github.com/rust-phf/rust-phf", features = ["macros"] }
+
+[build_dependencies]
+phf_codegen = { git = "https://github.com/rust-phf/rust-phf" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json  = "1.0"
